# Sentences_NLP

./: README.md  main.py  pyproject.toml  sentences_NLP.ipynb
